--- a/lang/de.json
+++ b/lang/de.json
@@ -2,8 +2,6 @@
     "(and :count more error)": "(und :count weiterer Fehler)",
     "(and :count more errors)": "(und :count weiterer Fehler)|(und :count weitere Fehler)|(und :count weitere Fehler)",
     "A decryption key is required.": "Ein Entschlüsselungsschlüssel ist nötig.",
-    "A new verification link has been sent to the email address you provided during registration.": "Ein neuer Bestätigungslink wurde an die E-Mail-Adresse gesendet, die Sie bei der Registrierung angegeben haben.",
-    "A new verification link has been sent to your email address.": "Ein neuer Bestätigungslink wurde an Ihre E-Mail-Adresse versendet.",
     "All rights reserved.": "Alle Rechte vorbehalten.",
     "Already registered?": "Bereits registriert?",
     "Are you sure you want to delete your account?": "Möchten Sie Ihr Konto wirklich löschen?",
@@ -33,6 +31,22 @@
     "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Sollten Sie Schwierigkeiten haben, die Schaltfläche \":actionText\" zu klicken, kopieren Sie den nachfolgenden Link\n in Ihre Adresszeile des Browsers.",
     "Invalid filename.": "Ungültiger Dateiname.",
     "Invalid JSON was returned from the route.": "Von der Route wurde ein ungültiger JSON-Code zurückgegeben.",
+    
+    
+    "verification-link-sent": "Registrierte E-Mail-Adresse noch nicht bestätigt",
+    "auth.registered.email_not_verified_title": "Deine E-Mail-Adresse ist noch nicht bestätigt.",
+   
+    "auth.registered.email_not_verified_text": "Neuer Bestätigungslink wurde an Deine E-Mail gesendet.",
+    
+    "auth.registered.resend_verification_email": "Verifizierungs E-Mail manuell anfordern.",
+
+    "auth.login.email_not_verified_error": "Bitte bestätige zuerst deine E-Mail-Adresse. Ohne Bestätigung ist kein Login möglich.",
+    "auth.login.email_not_verified_status": "Systemmeldung !",
+    
+
+    
+    "A new verification link has been sent to your email address.": "Ein neuer Bestätigungslink wurde an Ihre E-Mail-Adresse versendet.",
+    "A new verification link has been sent to the email address you provided during registration.": "Ein neuer Bestätigungslink wurde an die E-Mail-Adresse gesendet, die Sie bei der Registrierung angegeben haben.",
     "Location": "Standort",
     "Log in": "Einloggen",
     "Log Out": "Abmelden",
